--- a/config/apextoolgroup/default/field.storage.node.field_form_type.yml
+++ b/config/apextoolgroup/default/field.storage.node.field_form_type.yml
@@ -12,25 +12,25 @@ type: list_string
 settings:
   allowed_values:
     -
-      value: distributor
+      value: 'Become a Distributor'
       label: 'Become a Distributor'
     -
-      value: supplier
+      value: 'Become a Supplier'
       label: 'Become a Supplier'
     -
-      value: product_feedback
+      value: 'Product Feedback'
       label: 'Product Feedback'
     -
-      value: technical_question
+      value: 'Product Technical Question'
       label: 'Product Technical Question'
     -
-      value: warranty_repair
+      value: 'Warranty/Replacement Parts/Repair'
       label: 'Warranty/Replacement Parts/Repair'
     -
-      value: sales_quote
+      value: 'Sales Quote'
       label: 'Sales Quote'
     -
-      value: website_feedback
+      value: 'Website Feedback'
       label: 'Website Feedback'
   allowed_values_function: ''
 module: options
