--- a/config/apextoolgroup/default/core.entity_view_display.node.email_us.default.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.node.email_us.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.email_us.field_country_code
     - field.field.node.email_us.field_form_type
     - field.field.node.email_us.field_state_code
+    - field.field.node.email_us.field_unique_feed_id
     - node.type.email_us
   module:
     - options
@@ -46,6 +47,14 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     weight: 105
+    region: content
+  field_unique_feed_id:
+    type: string
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    weight: 109
     region: content
   links:
     settings: {  }
