--- a/config/apextoolgroup/default/core.entity_view_display.node.email_us.teaser.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.node.email_us.teaser.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.node.email_us.field_country_code
     - field.field.node.email_us.field_form_type
     - field.field.node.email_us.field_state_code
+    - field.field.node.email_us.field_unique_feed_id
     - node.type.email_us
   module:
     - user
@@ -28,5 +29,6 @@ hidden:
   field_country_code: true
   field_form_type: true
   field_state_code: true
+  field_unique_feed_id: true
   langcode: true
   search_api_excerpt: true
