Unique id field hide

--- a/config/apextoolgroup/default/core.entity_view_display.node.email_us.default.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.node.email_us.default.yml
@@ -23,7 +23,7 @@ content:
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 103
+    weight: 1
     region: content
   field_country_code:
     type: string
@@ -31,14 +31,14 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    weight: 108
+    weight: 4
     region: content
   field_form_type:
     type: list_default
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 107
+    weight: 3
     region: content
   field_state_code:
     type: string
@@ -46,22 +46,15 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    weight: 105
-    region: content
-  field_unique_feed_id:
-    type: string
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    weight: 109
+    weight: 2
     region: content
   links:
     settings: {  }
     third_party_settings: {  }
-    weight: 100
+    weight: 0
     region: content
 hidden:
   feeds_item: true
+  field_unique_feed_id: true
   langcode: true
   search_api_excerpt: true
