--- a/config/apextoolgroup/default/core.entity_form_display.node.email_us.default.yml
+++ b/config/apextoolgroup/default/core.entity_form_display.node.email_us.default.yml
@@ -53,14 +53,6 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  field_unique_feed_id:
-    type: string_textfield
-    weight: 26
-    region: content
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
   langcode:
     type: language_select
     weight: 5
@@ -120,3 +112,4 @@ content:
     third_party_settings: {  }
 hidden:
   feeds_item: true
+  field_unique_feed_id: true
