--- a/config/apex-tools/default/field.field.node.distributors.field_website.yml
+++ b/config/apex-tools/default/field.field.node.distributors.field_website.yml
@@ -9,7 +9,7 @@ id: node.distributors.field_website
 field_name: field_website
 entity_type: node
 bundle: distributors
-label: Website
+label: Region
 description: ''
 required: false
 translatable: false
