--- a/config/apex-tools/default/core.entity_form_display.node.distributors.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.node.distributors.default.yml
@@ -29,12 +29,11 @@ content:
     type: address_default
     weight: 2
     region: content
-    settings:
-      default_country: null
+    settings: {  }
     third_party_settings: {  }
   field_email:
     type: string_textfield
-    weight: 4
+    weight: 5
     region: content
     settings:
       size: 60
@@ -57,7 +56,7 @@ content:
     third_party_settings: {  }
   field_phone:
     type: string_textfield
-    weight: 3
+    weight: 4
     region: content
     settings:
       size: 60
@@ -81,7 +80,7 @@ content:
     third_party_settings: {  }
   field_website:
     type: string_textfield
-    weight: 5
+    weight: 3
     region: content
     settings:
       size: 60
@@ -96,7 +95,7 @@ content:
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 100
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -122,7 +121,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 50
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
