--- a/config/apex-tools/default/field.field.node.testimonials.field_quote.yml
+++ b/config/apex-tools/default/field.field.node.testimonials.field_quote.yml
@@ -11,7 +11,7 @@ entity_type: node
 bundle: testimonials
 label: Quote
 description: 'Quotation marks will be <em>automatically added</em> around the quote content when displayed.'
-required: true
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
