--- a/config/apex-tools/default/block.block.breadcrumbs.yml
+++ b/config/apex-tools/default/block.block.breadcrumbs.yml
@@ -17,4 +17,8 @@ settings:
   label: Breadcrumbs
   label_display: visible
   provider: system
-visibility: {  }
+visibility:
+  request_path:
+    id: request_path
+    negate: true
+    pages: '<front>'
