--- a/config/apextoolgroup/remote_prod/captcha.settings.yml
+++ b/config/apextoolgroup/remote_prod/captcha.settings.yml
@@ -6,7 +6,7 @@ description: 'This question is for testing whether or not you are a human visito
 administration_mode: false
 allow_on_admin_pages: false
 whitelist_ips: ''
-add_captcha_description: true
+add_captcha_description: false
 wrong_captcha_response_message: 'The answer you entered for the CAPTCHA was not correct.'
 default_validation: 1
 persistence: 1
