--- a/config/clecotools/default/core.entity_form_display.node.home.default.yml
+++ b/config/clecotools/default/core.entity_form_display.node.home.default.yml
@@ -7,11 +7,11 @@ dependencies:
     - field.field.node.home.field_callout_section_footer
     - field.field.node.home.field_featured
     - field.field.node.home.field_hero
+    - field.field.node.home.field_industry_solutions_home
     - field.field.node.home.field_mailing_list_form
     - field.field.node.home.field_seo
     - field.field.node.home.field_testimonials_block
     - node.type.home
-    - workflows.workflow.editorial
   module:
     - content_moderation
     - metatag
@@ -24,7 +24,7 @@ mode: default
 content:
   field_alternating_media_blocks:
     type: entity_reference_paragraphs
-    weight: 4
+    weight: 5
     region: content
     settings:
       title: 'Alternating Media Blocks'
@@ -36,7 +36,7 @@ content:
     third_party_settings: {  }
   field_callout_section_footer:
     type: entity_reference_paragraphs
-    weight: 6
+    weight: 7
     region: content
     settings:
       title: Paragraph
@@ -70,9 +70,19 @@ content:
       form_display_mode: default
       default_paragraph_type: ''
     third_party_settings: {  }
+  field_industry_solutions_home:
+    type: entity_reference_autocomplete
+    weight: 4
+    region: content
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   field_mailing_list_form:
     type: entity_reference_paragraphs
-    weight: 101
+    weight: 13
     region: content
     settings:
       title: 'Mailing List Form'
@@ -84,13 +94,15 @@ content:
     third_party_settings: {  }
   field_seo:
     type: metatag_firehose
-    weight: 9
+    weight: 10
     region: content
-    settings: {  }
+    settings:
+      sidebar: true
+      use_details: true
     third_party_settings: {  }
   field_testimonials_block:
     type: entity_reference_paragraphs
-    weight: 5
+    weight: 6
     region: content
     settings:
       title: Paragraph
@@ -109,19 +121,19 @@ content:
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 100
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
   path:
     type: path
-    weight: 8
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 7
+    weight: 8
     region: content
     settings:
       display_label: true
@@ -135,7 +147,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 50
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
