--- a/config/clecotools/default/core.entity_view_display.node.solutions.default.yml
+++ b/config/clecotools/default/core.entity_view_display.node.solutions.default.yml
@@ -29,7 +29,7 @@ content:
   content_moderation_control:
     settings: {  }
     third_party_settings: {  }
-    weight: 11
+    weight: 10
     region: content
   field_alternating_media_blocks:
     type: entity_reference_revisions_entity_view
@@ -93,15 +93,6 @@ content:
     third_party_settings: {  }
     weight: 7
     region: content
-  field_industry_solutions:
-    type: entity_reference_revisions_entity_view
-    label: above
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
-    weight: 10
-    region: content
   field_seo:
     type: metatag_empty_formatter
     label: above
@@ -120,7 +111,7 @@ content:
   links:
     settings: {  }
     third_party_settings: {  }
-    weight: 12
+    weight: 11
     region: content
   uuid:
     type: edit_uuid
@@ -130,6 +121,7 @@ content:
     weight: 0
     region: content
 hidden:
+  field_industry_solutions: true
   field_mailing_list_form: true
   langcode: true
   search_api_excerpt: true
