--- a/config/clecotools/default/core.entity_view_display.paragraph.hero.preview.yml
+++ b/config/clecotools/default/core.entity_view_display.paragraph.hero.preview.yml
@@ -13,6 +13,7 @@ dependencies:
     - field.field.paragraph.hero.field_title
     - field.field.paragraph.hero.field_title_prefix
     - field.field.paragraph.hero.field_title_suffix
+    - field.field.paragraph.hero.field_video
     - paragraphs.paragraphs_type.hero
   module:
     - entity_reference_revisions
@@ -60,4 +61,6 @@ hidden:
   field_media_src: true
   field_subtitle: true
   field_title_suffix: true
+  field_video: true
   search_api_excerpt: true
+  uuid: true
