APS-164: Missed configuration and image style for industry solutions

--- a/config/clecotools/default/image.style.industry_solutions.yml
+++ b/config/clecotools/default/image.style.industry_solutions.yml
@@ -4,4 +4,11 @@ status: true
 dependencies: {  }
 name: industry_solutions
 label: 'Industry Solutions (770×600)'
-effects: {  }
+effects:
+  46b5a47a-8df4-450f-8b67-a91e990c0406:
+    uuid: 46b5a47a-8df4-450f-8b67-a91e990c0406
+    id: image_resize
+    weight: 1
+    data:
+      width: 770
+      height: 600
