APS-164: Changes requested in PR- Moving all changes in atg theme to cleco theme, removing unwanted config changes in home and solutions CT

--- a/config/clecotools/default/core.entity_form_display.node.home.default.yml
+++ b/config/clecotools/default/core.entity_form_display.node.home.default.yml
@@ -12,6 +12,7 @@ dependencies:
     - field.field.node.home.field_seo
     - field.field.node.home.field_testimonials_block
     - node.type.home
+    - workflows.workflow.editorial
   module:
     - content_moderation
     - metatag
