--- a/config/apex-tools/default/core.entity_form_display.node.hubspot_form.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.node.hubspot_form.default.yml
@@ -1,90 +1,88 @@
-uuid: 12dbbfa6-a3d2-4728-9b97-026db2dc0405
+uuid: 54d4b0e6-7e8f-444b-8873-91ee28e06551
 langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.contact.field_forms
-    - field.field.node.contact.field_hero
-    - field.field.node.contact.field_hubspot_node
-    - field.field.node.contact.field_locations_content_type
-    - field.field.node.contact.field_mailing_list_form
-    - field.field.node.contact.field_seo
-    - node.type.contact
+    - field.field.node.hubspot_form.body
+    - field.field.node.hubspot_form.field_hubspot_code
+    - field.field.node.hubspot_form.field_image
+    - node.type.hubspot_form
   module:
     - content_moderation
-    - metatag
-    - paragraphs
+    - media_library
     - path
-id: node.contact.default
+    - text
+id: node.hubspot_form.default
 targetEntityType: node
-bundle: contact
+bundle: hubspot_form
 mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 6
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_hero:
-    type: entity_reference_paragraphs
-    weight: 4
+  field_hubspot_code:
+    type: text_textarea_with_summary
+    weight: 11
     region: content
     settings:
-      title: Paragraph
-      title_plural: Paragraphs
-      edit_mode: open
-      add_mode: dropdown
-      form_display_mode: default
-      default_paragraph_type: ''
-    third_party_settings: {  }
-  field_hubspot_node:
-    type: entity_reference_autocomplete
-    weight: 26
-    region: content
-    settings:
-      match_operator: CONTAINS
-      match_limit: 10
-      size: 60
+      rows: 9
+      summary_rows: 3
       placeholder: ''
+      show_summary: false
     third_party_settings: {  }
-  field_seo:
-    type: metatag_firehose
-    weight: 7
+  field_image:
+    type: media_library_widget
+    weight: 10
     region: content
     settings:
-      sidebar: true
-      use_details: true
+      media_types: {  }
     third_party_settings: {  }
   langcode:
     type: language_select
-    weight: 0
+    weight: 1
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 9
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
   path:
     type: path
-    weight: 2
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
+  promote:
+    type: boolean_checkbox
+    weight: 4
+    region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 3
+    weight: 9
+    region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
+  sticky:
+    type: boolean_checkbox
+    weight: 5
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: 1
+    weight: 0
     region: content
     settings:
       size: 60
@@ -92,7 +90,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 2
     region: content
     settings:
       match_operator: CONTAINS
@@ -101,13 +99,9 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 8
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
-  field_forms: true
-  field_locations_content_type: true
-  field_mailing_list_form: true
-  promote: true
-  sticky: true
+  body: true
