--- a/config/apex-tools/default/core.entity_view_display.node.contact.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.node.contact.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.contact.field_forms
     - field.field.node.contact.field_hero
+    - field.field.node.contact.field_hubspot_node
     - field.field.node.contact.field_locations_content_type
     - field.field.node.contact.field_mailing_list_form
     - field.field.node.contact.field_seo
@@ -56,7 +57,9 @@ content:
     weight: 4
     region: content
 hidden:
+  field_hubspot_node: true
   field_mailing_list_form: true
   langcode: true
   links: true
   search_api_excerpt: true
+  uuid: true
