--- a/config/apex-tools/default/core.entity_view_display.node.contact.teaser.yml
+++ b/config/apex-tools/default/core.entity_view_display.node.contact.teaser.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.contact.field_forms
     - field.field.node.contact.field_hero
+    - field.field.node.contact.field_hubspot_node
     - field.field.node.contact.field_locations_content_type
     - field.field.node.contact.field_mailing_list_form
     - field.field.node.contact.field_seo
@@ -30,8 +31,10 @@ content:
 hidden:
   field_forms: true
   field_hero: true
+  field_hubspot_node: true
   field_locations_content_type: true
   field_mailing_list_form: true
   field_seo: true
   langcode: true
   search_api_excerpt: true
+  uuid: true
