--- a/config/apex-tools/default/core.entity_view_display.node.contact.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.node.contact.default.yml
@@ -24,15 +24,6 @@ content:
     third_party_settings: {  }
     weight: 0
     region: content
-  field_forms:
-    type: entity_reference_revisions_entity_view
-    label: hidden
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
-    weight: 2
-    region: content
   field_hero:
     type: entity_reference_revisions_entity_view
     label: hidden
@@ -47,16 +38,17 @@ content:
     label: hidden
     settings: {  }
     third_party_settings: {  }
-    weight: 3
+    weight: 2
     region: content
   field_seo:
     type: metatag_empty_formatter
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 4
+    weight: 3
     region: content
 hidden:
+  field_forms: true
   field_hubspot_node: true
   field_mailing_list_form: true
   langcode: true
