--- a/config/apex-tools/default/language.content_settings.node.hubspot_form.yml
+++ b/config/apex-tools/default/language.content_settings.node.hubspot_form.yml
@@ -4,8 +4,13 @@ status: true
 dependencies:
   config:
     - node.type.hubspot_form
+  module:
+    - content_translation
+third_party_settings:
+  content_translation:
+    enabled: true
 id: node.hubspot_form
 target_entity_type_id: node
 target_bundle: hubspot_form
 default_langcode: site_default
-language_alterable: false
+language_alterable: true
