--- a/config/clecotools/default/core.entity_view_display.node.home.teaser.yml
+++ b/config/clecotools/default/core.entity_view_display.node.home.teaser.yml
@@ -8,9 +8,11 @@ dependencies:
     - field.field.node.home.field_callout_section_footer
     - field.field.node.home.field_featured
     - field.field.node.home.field_hero
+    - field.field.node.home.field_industry_solutions_home
     - field.field.node.home.field_mailing_list_form
     - field.field.node.home.field_seo
     - field.field.node.home.field_testimonials_block
+    - field.field.node.home.field_trus
     - node.type.home
   module:
     - user
@@ -34,8 +36,11 @@ hidden:
   field_callout_section_footer: true
   field_featured: true
   field_hero: true
+  field_industry_solutions_home: true
   field_mailing_list_form: true
   field_seo: true
   field_testimonials_block: true
+  field_trus: true
   langcode: true
   search_api_excerpt: true
+  uuid: true
