--- a/config/clecotools/local/core.extension.yml
+++ b/config/clecotools/local/core.extension.yml
@@ -6,6 +6,7 @@ module:
   acquia_search: 0
   address: 0
   admin_toolbar: 0
+  admin_toolbar_tools: 0
   advagg: 0
   advagg_css_minify: 0
   advagg_js_minify: 0
@@ -23,8 +24,11 @@ module:
   automated_cron: 0
   better_exposed_filters: 0
   big_pipe: 0
+  blazy: 0
+  blazy_ui: 0
   block: 0
   block_content: 0
+  block_field: 0
   breakpoint: 0
   captcha: 0
   ckeditor: 0
@@ -133,6 +137,9 @@ module:
   sfweb2lead_webform: 0
   shield: 0
   shortcut: 0
+  slick: 0
+  slick_ui: 0
+  slick_views: 0
   sophron: 0
   stage_file_proxy: 0
   swiftmailer: 0
