--- a/config/clecotools/default/core.entity_form_display.node.home.default.yml
+++ b/config/clecotools/default/core.entity_form_display.node.home.default.yml
@@ -7,12 +7,15 @@ dependencies:
     - field.field.node.home.field_callout_section_footer
     - field.field.node.home.field_featured
     - field.field.node.home.field_hero
+    - field.field.node.home.field_industry_solutions_home
     - field.field.node.home.field_mailing_list_form
     - field.field.node.home.field_seo
     - field.field.node.home.field_testimonials_block
+    - field.field.node.home.field_trus
     - node.type.home
     - workflows.workflow.editorial
   module:
+    - block_field
     - content_moderation
     - metatag
     - paragraphs
@@ -24,7 +27,7 @@ mode: default
 content:
   field_alternating_media_blocks:
     type: entity_reference_paragraphs
-    weight: 4
+    weight: 5
     region: content
     settings:
       title: 'Alternating Media Blocks'
@@ -36,7 +39,7 @@ content:
     third_party_settings: {  }
   field_callout_section_footer:
     type: entity_reference_paragraphs
-    weight: 6
+    weight: 9
     region: content
     settings:
       title: Paragraph
@@ -70,9 +73,19 @@ content:
       form_display_mode: default
       default_paragraph_type: ''
     third_party_settings: {  }
+  field_industry_solutions_home:
+    type: entity_reference_autocomplete
+    weight: 4
+    region: content
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   field_mailing_list_form:
     type: entity_reference_paragraphs
-    weight: 101
+    weight: 15
     region: content
     settings:
       title: 'Mailing List Form'
@@ -84,13 +97,15 @@ content:
     third_party_settings: {  }
   field_seo:
     type: metatag_firehose
-    weight: 9
+    weight: 12
     region: content
-    settings: {  }
+    settings:
+      sidebar: true
+      use_details: true
     third_party_settings: {  }
   field_testimonials_block:
     type: entity_reference_paragraphs
-    weight: 5
+    weight: 6
     region: content
     settings:
       title: Paragraph
@@ -99,6 +114,15 @@ content:
       add_mode: dropdown
       form_display_mode: default
       default_paragraph_type: ''
+    third_party_settings: {  }
+  field_trus:
+    type: block_field_default
+    weight: 8
+    region: content
+    settings:
+      plugin_id: ''
+      settings: {  }
+      configuration_form: full
     third_party_settings: {  }
   langcode:
     type: language_select
@@ -109,19 +133,19 @@ content:
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 100
+    weight: 14
     region: content
     settings: {  }
     third_party_settings: {  }
   path:
     type: path
-    weight: 8
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 7
+    weight: 10
     region: content
     settings:
       display_label: true
@@ -135,7 +159,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 50
+    weight: 13
     region: content
     settings: {  }
     third_party_settings: {  }
