--- a/config/clecotools/default/image.style.industry_solutions.yml
+++ b/config/clecotools/default/image.style.industry_solutions.yml
@@ -3,12 +3,13 @@ langcode: en
 status: true
 dependencies: {  }
 name: industry_solutions
-label: 'Industry Solutions (770×600)'
+label: 'Industry Solutions'
 effects:
-  46b5a47a-8df4-450f-8b67-a91e990c0406:
-    uuid: 46b5a47a-8df4-450f-8b67-a91e990c0406
-    id: image_resize
+  5d5736f3-f181-4a08-a2aa-a05c5adbde1a:
+    uuid: 5d5736f3-f181-4a08-a2aa-a05c5adbde1a
+    id: image_scale_and_crop
     weight: 1
     data:
-      width: 770
-      height: 600
+      width: 350
+      height: 450
+      anchor: center-center
