--- a/config/clecotools/default/core.entity_view_display.node.solutions.default.yml
+++ b/config/clecotools/default/core.entity_view_display.node.solutions.default.yml
@@ -13,10 +13,11 @@ dependencies:
     - field.field.node.solutions.field_industry_solutions
     - field.field.node.solutions.field_mailing_list_form
     - field.field.node.solutions.field_seo
+    - field.field.node.solutions.field_trusted_by_biggest
     - field.field.node.solutions.field_webform
     - node.type.solutions
   module:
-    - edit_uuid
+    - block_field
     - entity_reference_revisions
     - metatag
     - user
@@ -29,42 +30,43 @@ content:
   content_moderation_control:
     settings: {  }
     third_party_settings: {  }
-    weight: 10
+    weight: 0
     region: content
   field_alternating_media_blocks:
     type: entity_reference_revisions_entity_view
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
-    third_party_settings: {  }
-    weight: 1
-    region: content
-  field_callout_section_footer:
-    type: entity_reference_revisions_entity_view
-    label: above
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
-    weight: 2
-    region: content
-  field_card:
-    type: entity_reference_label
-    label: above
-    settings:
-      link: true
     third_party_settings: {  }
     weight: 3
     region: content
-  field_featured_products:
+  field_callout_section_footer:
     type: entity_reference_revisions_entity_view
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
     third_party_settings: {  }
-    weight: 4
+    weight: 6
+    region: content
+  field_card:
+    type: entity_reference_entity_view
+    label: hidden
+    settings:
+      view_mode: default
+      link: true
+    third_party_settings: {  }
+    weight: 9
+    region: content
+  field_featured_products:
+    type: entity_reference_revisions_entity_view
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    weight: 5
     region: content
   field_find_a_distributor:
     type: entity_reference_revisions_entity_view
@@ -73,32 +75,39 @@ content:
       view_mode: default
       link: ''
     third_party_settings: {  }
-    weight: 5
+    weight: 10
     region: content
   field_forms:
     type: entity_reference_revisions_entity_view
-    label: above
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
-    weight: 6
-    region: content
-  field_hero:
-    type: entity_reference_revisions_entity_view
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
     third_party_settings: {  }
     weight: 7
     region: content
+  field_hero:
+    type: entity_reference_revisions_entity_view
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    weight: 2
+    region: content
   field_seo:
     type: metatag_empty_formatter
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 8
+    weight: 11
+    region: content
+  field_trusted_by_biggest:
+    type: block_field
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+    weight: 4
     region: content
   field_webform:
     type: webform_entity_reference_entity_view
@@ -106,22 +115,16 @@ content:
     settings:
       source_entity: true
     third_party_settings: {  }
-    weight: 9
+    weight: 8
     region: content
   links:
     settings: {  }
     third_party_settings: {  }
-    weight: 11
-    region: content
-  uuid:
-    type: edit_uuid
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    weight: 0
+    weight: 1
     region: content
 hidden:
   field_industry_solutions: true
   field_mailing_list_form: true
   langcode: true
   search_api_excerpt: true
+  uuid: true
