--- a/config/clecotools/default/core.entity_view_display.node.solutions.teaser.yml
+++ b/config/clecotools/default/core.entity_view_display.node.solutions.teaser.yml
@@ -14,6 +14,7 @@ dependencies:
     - field.field.node.solutions.field_industry_solutions
     - field.field.node.solutions.field_mailing_list_form
     - field.field.node.solutions.field_seo
+    - field.field.node.solutions.field_trusted_by_biggest
     - field.field.node.solutions.field_webform
     - node.type.solutions
   module:
@@ -44,6 +45,7 @@ hidden:
   field_industry_solutions: true
   field_mailing_list_form: true
   field_seo: true
+  field_trusted_by_biggest: true
   field_webform: true
   langcode: true
   search_api_excerpt: true
